--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+/* ---------------------- */
+/*   Custom Properties    */
+/* ---------------------- */
+
+:root {
+   --clr-dark: 230, 35%, 7%;
+   --clr-light: 231, 77%, 90%;
+   --clr-white: 0, 0%, 100%;
+}
+
 /* ---------- */
 /*   Reset    */
 /* ---------- */
@@ -39,7 +49,7 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 100vh;
-  text-rendering: optimizeSpeed;
+  text-rendering: optimizeSpeed; 
   line-height: 1.5;
 }
 
@@ -73,4 +83,50 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+/* --------------- */
+/* Utility Classes */
+/* --------------- */
+
+.flex {
+  display: flex;
+  gap: var(--gap, 1rem);
+}
+
+.grid {
+  display: grid;
+  gap: var(--gap, 1rem);
+}
+
+.container {
+  padding-inline: 2em;
+  margin-inline: auto;
+  max-width: 60rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+}
+
+
+/* colors */
+
+.bg-dark { background-color: hsl( var(--clr-dark));}
+.bg-accent { background-color: hsl( var(--clr-light));}
+.bg-white { background-color: hsl( var(--clr-white));}
+
+.text-dark { color: hsl( var(--clr-dark));}
+.text-accent { color: hsl( var(--clr-light));}
+.text-white { color: hsl( var(--clr-white));}
+
+.example {
+  .bg-accent { background-color: hsl( var(--clr-light));}
 }
