--- a/index.css
+++ b/index.css
@@ -3,10 +3,25 @@
 /* ---------------------- */
 
 :root {
+  /* colors */
    --clr-dark: 230, 35%, 7%;
    --clr-light: 231, 77%, 90%;
    --clr-white: 0, 0%, 100%;
+  /* font-sizes */
+   --fs-900: 9.375rem;
+   --fs-800: 6.25rem;
+   --fs-700: 3.5rem;
+   --fs-600: 2rem;
+   --fs-500: 1.75rem;
+   --fs-400: 1.125rem;
+   --fs-300: 1rem;
+   --fs-200: 0.875rem;
+  /* font-families */
+   --ff-serif: "Bellefair", serif;
+   --ff-sans-cond: "Barlow Condensed", sans-serif;
+   --ff-sans-normal: "Barlow", sans-serif;
 }
+
 
 /* ---------- */
 /*   Reset    */
@@ -126,7 +141,3 @@ select {
 .text-dark { color: hsl( var(--clr-dark));}
 .text-accent { color: hsl( var(--clr-light));}
 .text-white { color: hsl( var(--clr-white));}
-
-.example {
-  
-}
