--- a/index.css
+++ b/index.css
@@ -63,6 +63,10 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
+  font-family: var(--ff-sans-normal);
+  font-size: var(--fs-400);
+  color:hsl( var(--clr-white));
+  background-color: hsl( var(--clr-dark));
   min-height: 100vh;
   text-rendering: optimizeSpeed; 
   line-height: 1.5;
@@ -141,3 +145,32 @@ select {
 .text-dark { color: hsl( var(--clr-dark));}
 .text-accent { color: hsl( var(--clr-light));}
 .text-white { color: hsl( var(--clr-white));}
+
+/* typography */
+
+.ff-serif { font-family: var(--ff-serif);}
+.ff-sans-cond { font-family: var(--ff-sans-cond);}
+.ff-sans-normal { font-family: var(--ff-sans-normal);}
+
+.letter-spacing-1 { letter-spacing: 4.75px;}
+.letter-spacing-2 { letter-spacing: 2.7px;}
+.letter-spacing-3 { letter-spacing: 2.35px;}
+
+.uppercase { text-transform: uppercase;}
+
+.fs-900 { font-size: var(--fs-900);}
+.fs-800 { font-size: var(--fs-800);}
+.fs-700 { font-size: var(--fs-700);}
+.fs-600 { font-size: var(--fs-600);}
+.fs-500 { font-size: var(--fs-500);}
+.fs-400 { font-size: var(--fs-400);}
+.fs-300 { font-size: var(--fs-300);}
+.fs-200 { font-size: var(--fs-200);}
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+  line-height: 1.1;
+}
+  
