--- a/index.css
+++ b/index.css
@@ -44,12 +44,22 @@ h2,
 h3,
 h4,
 h5,
+h6,
 p,
 figure,
 picture {
     margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
+}
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
@@ -117,6 +127,10 @@ select {
   gap: var(--gap, 1rem);
 }
 
+/* --- shorthand for "*:not(:first-child)"--- */
+.flow > * + * {
+  margin-top: 1rem;
+}
 .container {
   padding-inline: 2em;
   margin-inline: auto;
@@ -173,4 +187,16 @@ select {
 .fs-600 {
   line-height: 1.1;
 }
-  
+
+.numbered-title {
+  font-family: var(--ff-sans-cond);
+  font-size: var(--fs-500);
+  text-transform: uppercase;
+  letter-spacing: 4.72px;
+}
+
+.numbered-title span {
+  margin-right: .5em;
+  font-weight: 700;
+  color: hsl( var(--clr-white), .25); 
+}
