--- a/font.scss
+++ b/font.scss
@@ -15,3 +15,13 @@ $ff-sans-cond: "Barlow Condensed", sans-serif;
 $ff-sans-normal: "Barlow", sans-serif;
 
 //
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
+}
