--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,17 @@
+//...reset...
+
 * {
     margin: 0;
     padding: 0;
+}
+
+
+
+/* https://piccalil.li/blog/a-modern-css-reset/ */
+
+/* Box sizing */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
