--- a/style.scss
+++ b/style.scss
@@ -18,10 +18,10 @@
 
 /* Set core body defaults */
 body {
-    font-family: var(--ff-sans-normal);
-    font-size: var(--fs-400);
-    color: hsl( var(--clr-white));
-    background-color: hsl( var(--clr-dark));
+    font-family: $ff-sans-normal;
+    font-size: $fs-400;
+    color: $clr-white;
+    background-color: $clr-dark;
     min-height: 100vh;
     text-rendering: optimizeSpeed; 
     line-height: 1.5;
