--- a/font.scss
+++ b/font.scss
@@ -14,7 +14,8 @@ $ff-serif: "Bellefair", serif;
 $ff-sans-cond: "Barlow Condensed", sans-serif;
 $ff-sans-normal: "Barlow", sans-serif;
 
-//
+//...
+
 
 h1,
 h2,
@@ -50,22 +51,6 @@ p {
 .letter-spacing-3 { letter-spacing: 2.35px;}
 
 .uppercase { text-transform: uppercase;}
-
-.fs-900 { font-size: var(--fs-900);}
-.fs-800 { font-size: var(--fs-800);}
-.fs-700 { font-size: var(--fs-700);}
-.fs-600 { font-size: var(--fs-600);}
-.fs-500 { font-size: var(--fs-500);}
-.fs-400 { font-size: var(--fs-400);}
-.fs-300 { font-size: var(--fs-300);}
-.fs-200 { font-size: var(--fs-200);}
-
-.fs-900,
-.fs-800,
-.fs-700,
-.fs-600 {
-  line-height: 1.1;
-}
 
 .numbered-title {
   font-family: var(--ff-sans-cond);
